--- a/templates/Welcome.html
+++ b/templates/Welcome.html
@@ -9,7 +9,7 @@
   <body>
   <h1> you have sent the page title as :{{name}}</h1>
   <h2>{{name}} please upload file below</h2>
-  <form action = "http://localhost:8080/uploader" method = "POST"
+  <form action = "/uploader" method = "POST"
     enctype="multipart/form-data">
     <input type = "file" name = "file">
     <input type = "submit"/>
