--- a/templates/UploadFile.html
+++ b/templates/UploadFile.html
@@ -9,7 +9,7 @@
   <body>
   
   <h2> please upload file below</h2>
-  <form action = "http://localhost:8080/upload" method = "POST"
+  <form action = "/upload" method = "POST"
     enctype="multipart/form-data">
     <input type = "file" name = "file">
     <input type = "submit"/>
